# hyper-mcp

.ai/: hyper-mcp.json  mycommand-mcp.yaml
.github/: copilot-instructions.md
.serena/memories/: plan.md
examples/plugins/bing-search/: Cargo.toml  README.md  xtp.toml
examples/plugins/bing-search/src/: lib.rs  pdk.rs
examples/plugins/brave-search/: Cargo.toml  README.md  xtp.toml
examples/plugins/brave-search/src/: lib.rs
examples/plugins/duckduckgo-search/: Cargo.toml  README.md  xtp.toml
examples/plugins/duckduckgo-search/src/: lib.rs
examples/plugins/google-search/: Cargo.toml  README.md  xtp.toml
examples/plugins/google-search/src/: lib.rs
examples/plugins/openproject/: README.md  go.mod  main.go  tools.go
examples/plugins/perplexity-search/: Cargo.toml  README.md  xtp.toml
examples/plugins/perplexity-search/src/: lib.rs  pdk.rs
examples/plugins/sequentialthinking/: README.md  go.mod  main.go
