[package]
name = "perplexity-search"
version = "0.1.0"
edition = "2021"

[lib]
name = "plugin"
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64-serde = "0.8"
base64 = "0.22"
urlencoding = "2.1"

[workspace]
